added bot with database links

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ whitenoise
 pillow
 django-jazzmin
 django-import-export
+langchain
+langchain-google-genai 
+langchain-community
+chromadb
+pypdf
+schedule
