added new models and forms

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 GOOGLE_API_KEY=AIzaSyAh5HbTtCHsO_ZWAtCtn_q5h2_Jw7tEfe8
 HUGGING_FACE_API_KEY=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
+
+SMS_ACCOUNT_SSID_API_KEY=AC954136eee66cc8ba187c7722f5840d13
+SMS_ACCOUNT_AUTH_API_KEY=d1501d7b07f1625cce8b4c46c1d5a8f1
+SMS_FROM_NUMBER=+12085516281
